# dotfiles

./: .gitignore  .mcp.json  .shellspec  .stow-global-ignore  .stowrc  AGENTS.md  Makefile  PASSWORD-STORE-WORKFLOW.md  PROFILES.md  README.md  SETUP.md  agents.json  current-state  install-master.sh  install.sh  test-dotfiles.sh  test_ssh.txt  view-test-results.sh
.aim/: memory.jsonl
.claude/: settings.json
.cursor/: mcp.json
.github/: opencode-README.md
.opencode/: opencode.json  skills
.research/: stream-1-sources-2025-11-12.md  xero-overpayment-sources-2025-11-12.md  xero-overpayment-ui-research-2025-11-12.md
.serena/: project.yml
.taskmaster/: state.json
ccstatusline/: README.md
chrome-automation/: README.md  chrome_commands.sh  chrome_keeper.sh  (+3 more)
claude/.claude/ai_docs/claude-agent-sdk-tutorial/: .gitignore  0_querying.py  1_messages.py  2_tools.py  3_options.py  4_convo_loop.py  5_mcp.py  6_subagents.py  CLAUDE.md  README.md  cli_tools.py  pyproject.toml
claude/.claude/ai_docs/claude-agent-sdk-tutorial/.claude/: settings.json
claude/.claude/ai_docs/claude-agent-sdk-tutorial/.claude/agents/: documentation-writer.md
claude/.claude/ai_docs/claude-agent-sdk-tutorial/.claude/commands/: security-check.md
claude/.claude/ai_docs/claude-agent-sdk-tutorial/.claude/hooks/: log_agent_actions.py
claude/.claude/ai_docs/claude-agent-sdk-tutorial/.claude/output-styles/: personal-assistant.md
claude/.claude/ai_docs/claude-agent-sdk-tutorial/db/: products.json
claude/.claude/ai_docs/claude-agent-sdk-tutorial/docs/: module-5-mcp.md  module-6-subagents.md
(+1300 files in other folders)
